# NET_FINAL

./: readme.md
code/: readme.md
code/client/: CMakeLists.txt  main.cpp
code/client/include/: client.hpp
code/client/src/: client.cpp
code/data_center/: CMakeLists.txt  main.cpp
code/data_center/include/: data_center.hpp
code/data_center/src/: data_center.cpp
code/server/: CMakeLists.txt  main.cpp
code/server/include/: game.hpp  neuronal_network.hpp  server.hpp
code/server/src/: game.cpp  neuronal_network.cpp  server.cpp
